<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23272A">

    <Button
        android:id="@+id/hit_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#7289DA"
        android:fontFamily="monospace"
        android:hapticFeedbackEnabled="true"
        android:text="@string/hit"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stand_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#7289DA"
        android:fontFamily="monospace"
        android:hapticFeedbackEnabled="true"
        android:text="@string/stand"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/submit_bet_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="184dp"
        android:backgroundTint="#7289DA"
        android:fontFamily="monospace"
        android:hapticFeedbackEnabled="true"
        android:text="@string/bet"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/total_money_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/money"
        android:textAlignment="textStart"
        android:textColor="#6CFF50"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_cards._txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:text="@string/your_cards"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/total_score_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/player_log_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/bet_input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dealer_cards_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer_txt"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif"
        android:text="@string/s_left_to_respond"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/dealer_total_score_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/dealer_score"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dealer_cards_txt" />

    <TextView
        android:id="@+id/player2_cards_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:text="@string/player2_cards"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player2_money_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="serif"
        android:text="@string/money_bet"
        android:textAlignment="textStart"
        android:textColor="#6CFF50"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2_total_score_txt" />

    <TextView
        android:id="@+id/player3_total_score_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/player3_score"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player3_cards_txt" />

    <TextView
        android:id="@+id/player3_cards_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:text="@string/player3_cards"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player4_money_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="serif"
        android:text="@string/money_bet"
        android:textAlignment="textStart"
        android:textColor="#6CFF50"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player4_total_score_txt" />

    <TextView
        android:id="@+id/player2_total_score_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/player2_score"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2_cards_txt" />

    <TextView
        android:id="@+id/player3_money_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="serif"
        android:text="@string/money_bet"
        android:textAlignment="textStart"
        android:textColor="#6CFF50"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player3_total_score_txt" />

    <TextView
        android:id="@+id/player4_total_score_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/player4_score"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player4_cards_txt" />

    <TextView
        android:id="@+id/player4_cards_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:text="@string/player4_cards"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_score_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:fontFamily="serif"
        android:text="@string/total_score"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/current_bet_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="12dp"
        android:fontFamily="serif"
        android:text="@string/current_bet"
        android:textAlignment="textStart"
        android:textColor="#6CFF50"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_money_txt" />

    <Button
        android:id="@+id/leave_game_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#7E0000"
        android:fontFamily="monospace"
        android:hapticFeedbackEnabled="true"
        android:text="@string/leave"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bet_input_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        android:ems="10"
        android:hint="@string/place_your_bet_here"
        android:inputType="numberSigned"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submit_bet_btn"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>