<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23272A">

    <Button
        android:id="@+id/join_solo_game_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#7289DA"
        android:fontFamily="monospace"
        android:hapticFeedbackEnabled="true"
        android:text="@string/join"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt3" />

    <Button
        android:id="@+id/join_two_game_btn2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#7289DA"
        android:fontFamily="monospace"
        android:hapticFeedbackEnabled="true"
        android:text="@string/join"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_solo_game_btn" />

    <Button
        android:id="@+id/join_three_game_btn3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#7289DA"
        android:fontFamily="monospace"
        android:hapticFeedbackEnabled="true"
        android:text="@string/join"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_two_game_btn2" />

    <Button
        android:id="@+id/join_four_game_btn4"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="110dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#7289DA"
        android:fontFamily="monospace"
        android:hapticFeedbackEnabled="true"
        android:text="@string/join"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_three_game_btn3" />

    <Button
        android:id="@+id/leave_queue_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="113dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="148dp"
        android:backgroundTint="#7289DA"
        android:fontFamily="monospace"
        android:hapticFeedbackEnabled="true"
        android:text="@string/leave_queue"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/queue_timer_txt" />

    <TextView
        android:id="@+id/lobby_username_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/username"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="227dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:fontFamily="serif"
        android:text="@string/play_by_yourself_or_with_other_people"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt3" />

    <TextView
        android:id="@+id/queue_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="164dp"
        android:fontFamily="serif"
        android:text="@string/currently_in_queue_for_type"
        android:textAlignment="center"
        android:textColor="#6CFF50"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/players_online_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="serif"
        android:text="@string/current_players_online_amount"
        android:textAlignment="textStart"
        android:textColor="#6CFF50"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toEndOf="@+id/lobby_username_txt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/queue_timer_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="serif"
        android:text="@string/seconds_have_elapsed"
        android:textAlignment="center"
        android:textColor="#6CFF50"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/queue_info_txt" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="225dp"
        android:layout_height="29dp"
        android:layout_marginTop="92dp"
        android:fontFamily="serif"
        android:text="@string/matchmaking"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/queue_type_txt1"
        android:layout_width="132dp"
        android:layout_height="27dp"
        android:layout_marginTop="104dp"
        android:fontFamily="serif"
        android:text="@string/solo_game"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/join_solo_game_btn"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt3" />

    <TextView
        android:id="@+id/queue_type_txt2"
        android:layout_width="132dp"
        android:layout_height="27dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif"
        android:text="@string/_2_players"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/join_two_game_btn2"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/queue_type_txt1" />

    <TextView
        android:id="@+id/queue_type_txt3"
        android:layout_width="132dp"
        android:layout_height="27dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif"
        android:text="@string/_3_players"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/join_three_game_btn3"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/queue_type_txt2" />

    <TextView
        android:id="@+id/queue_type_txt4"
        android:layout_width="132dp"
        android:layout_height="27dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif"
        android:text="@string/_4_players"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/join_four_game_btn4"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/queue_type_txt3" />

</androidx.constraintlayout.widget.ConstraintLayout>