<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23272A"
    tools:context=".activities.MainActivity" >

    <TextView
        android:id="@+id/app_title"
        android:layout_width="281dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:fontFamily="serif"
        android:text="@string/online_blackjack"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="serif"
        android:text="@string/enter_your_username"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title" />

    <TextView
        android:id="@+id/main_activity_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:textColor="#B60000"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="221dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:maxLength="16"
        android:textColor="#FFFFFF"
        android:textColorHint="#C6C6C6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="" />

    <TextView
        android:id="@+id/version_id_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/version_1_0a"
        android:textColor="#6CFF50"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/server_status_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Server Status: Offline"
        android:textColor="#FF0000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/register_username_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="121dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#7289DA"
        android:fontFamily="monospace"
        android:hapticFeedbackEnabled="true"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input" />

</androidx.constraintlayout.widget.ConstraintLayout>